jboot v2.0.6:
新增：@StaticConstruct 的支持，用于支持 AOP 自定义的静态构造
优化：优化 JbootActionHandler 代码，减少不必要的 AOP 注入
优化：优化 ClassScanner 代码，在 Tomcat 环境下排除对 Tomcat Jar 包的扫描
优化：优化 JbootUndertowConfig 代码，增加 classpath:webapp 默认设置的支持


jboot v2.0.5:
升级 JFinal 到 3.8 最新版本


jboot v2.0.4:
优化：优化 JbootController 的 getBaseUrl 性能问题
优化：当 render 发生错误时，不方便对 Controller 方法进行定位的问题
优化：升级 druid 和 fescar 到最新版本
修复：修复 AOP 当子类为定义任何属性的时候，父类无法正常被注入的问题
修复：修复 ClassScanner 无法扫描自身的问题


jboot v2.0.3:
优化：通过注解 @EnableCORS 自定义 Option Method 的配置
优化：Dubbo Filter 在未开启 Fescar 时不执行任何操作
优化：在 代码生成器 里添加 remarks 的相关生成


jboot v2.0.2:
紧急修复不使用 Fescar 时，会出现 NoClassDefFoundError 的问题


jboot v2.0.1:
新增：Fescar 分布式事务的支持，只需要一个 @FescarGlobalTransactional 注解即可完成分布式事务，感谢 [@frank9527](https://my.oschina.net/frank9527)
新增：代码生成器的 remarks 生成的功能
优化：重构 FixedInterceptor，在其方法传入 Invocation 即可，而不是 FixedInvocation，方便拦截器在 Controller 和 Aop 层的复用。
修复：html、css、js 的热加载功能 当缺少commons-io的依赖会出错的问题
修复：@EnableCORS 开启跨域请求功能，在某些情况下不起作用的问题


jboot v2.0:
新增：Metrics 的 InfluxdbReporter 支持，方便把信息通过 influx 输入到 grafana
优化：修改 RequestUtil 工具类的拼写错误问题，isMoblieBrowser 修改为 isMobileBrowser
优化：修改 StrUtil.isMobileNumber() 新增 166 开头号码的支持
优化：大幅度优化 StrUtil.escapeHtml() 的性能
优化：升级 JFinal 到 3.7 最新版本和 JFinal-undertow 到 1.6 最新版本
修复：当使用 shiro 的时候，shiro 设置的session数据通过无法正常获取的问题


jboot v2.0-rc.13:
新增：新增 UrlParaValidate 注解，方便对 URl 参数进行验证
新增：新增 jboot.cache.aopCacheLiveSeconds 配置，方便给 service 的 注解添加下默认的缓存时间
新增：Columns 新增 in 和 between 的支持
新增：jboot.model.scanPackage 和 unscanPackage 的支持，方便自定义扫描的 Model
新增：新增 dubbo 的 zookeeper 注册中心的测试用例代码
新增：新增 Metrics 测试用例代码
修复：swaggerui中index.html中css，js，json资源路径错误的bug，感谢 @ninemm
修复：修复 Columns 查询时，有 or 是可能造成 sql 逻辑错误的问题
优化：优化 ClassScanner 配置逻辑，防止热加载时可能意外出错的情况
优化：优化 JbootScheduleManager 代码逻辑，方便自由添加任何和删除任务
优化：优化 JbootPaginateDirective 指令代码


jboot v2.0-rc.12:
新增：JbootAopFactory 新增自定义 Service 拦截器，方便 Service 拦截和切面编程。
修复：当通过环境变量去配置数据源的时候，DataSourceConfigManager无法获取多数据源的问题。
修复：用户自定义 JbootActionHandler 时的逻辑判断。
优化：优化 JbootConfigManager 读取 value 值的逻辑优化。