@@ -1,6 +1,6 @@
 undertow.host=127.0.0.1
 undertow.port=8888
-#undertow.resourcePath = src/test/resources
+undertow.resourcePath = src/test/resources
 #undertow.hotSwapClassPrefix=
 #undertow.unHotSwapClassPrefix=
 
