@@ -3,6 +3,7 @@ jboot v2.0.6:
 优化：优化 JbootActionHandler 代码，减少不必要的 AOP 注入
 优化：优化 ClassScanner 代码，在 Tomcat 环境下排除对 Tomcat Jar 包的扫描
 优化：优化 JbootUndertowConfig 代码，增加 classpath:webapp 默认设置的支持
+优化：优化 JbootResourceLoader 性能，当父级不是 maven 项目的时候减少不必要的文件扫描
 
 
 jboot v2.0.5:
